; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__can_include_untracked_and_ignored_files.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__can_include_untracked_and_ignored_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stash_tip_oid = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@signature = common dso_local global i32 0, align 4
@GIT_STASH_INCLUDE_UNTRACKED = common dso_local global i32 0, align 4
@GIT_STASH_INCLUDE_IGNORED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"refs/stash^3\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"untracked files on master: \00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"refs/stash^3:what\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"refs/stash^3:how\00", align 1
@.str.4 = private unnamed_addr constant [17 x i8] c"refs/stash^3:who\00", align 1
@.str.5 = private unnamed_addr constant [18 x i8] c"refs/stash^3:when\00", align 1
@.str.6 = private unnamed_addr constant [41 x i8] c"b6ed15e81e2593d7bb6265eb4a991d29dc3e628b\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"refs/stash^3:just.ignore\00", align 1
@.str.8 = private unnamed_addr constant [41 x i8] c"78925fb1236b98b37a35e9723033e627f97aa88b\00", align 1
@.str.9 = private unnamed_addr constant [18 x i8] c"stash/just.ignore\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_save__can_include_untracked_and_ignored_files() #0 {
  %1 = load i32, i32* @repo, align 4
  %2 = load i32, i32* @signature, align 4
  %3 = load i32, i32* @GIT_STASH_INCLUDE_UNTRACKED, align 4
  %4 = load i32, i32* @GIT_STASH_INCLUDE_IGNORED, align 4
  %5 = or i32 %3, %4
  %6 = call i32 @git_stash_save(i32* @stash_tip_oid, i32 %1, i32 %2, i32* null, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = call i32 @assert_commit_message_contains(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* null)
  %10 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i8* null)
  %11 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0), i8* null)
  %12 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.6, i64 0, i64 0))
  %13 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.8, i64 0, i64 0))
  %14 = call i32 @git_path_exists(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.9, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i32 @cl_assert(i32 %17)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_stash_save(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @assert_commit_message_contains(i8*, i8*) #1

declare dso_local i32 @assert_blob_oid(i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_exists(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
